[gd_scene load_steps=12 format=3 uid="uid://deq5v42fmh0y7"]

[ext_resource type="Script" path="res://src/ui/explorer.gd" id="1_5n8xk"]
[ext_resource type="PackedScene" uid="uid://blv7r5folt1d5" path="res://assets/test_player/player.tscn" id="3_8rjl7"]
[ext_resource type="Texture2D" uid="uid://m7i23bc2yyqt" path="res://assets/grid.png" id="3_g5xa3"]
[ext_resource type="PackedScene" uid="uid://dkqc3of5bdx2i" path="res://src/ui/map/map.tscn" id="4_3k3lb"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_xbryr"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_ogrvh"]
sky_material = SubResource("ProceduralSkyMaterial_xbryr")

[sub_resource type="Environment" id="Environment_ur1u6"]
background_mode = 2
sky = SubResource("Sky_ogrvh")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lovo8"]

[sub_resource type="PlaneMesh" id="PlaneMesh_x854j"]
material = SubResource("ShaderMaterial_lovo8")
size = Vector2(4800, 4800)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fstik"]
albedo_texture = ExtResource("3_g5xa3")
uv1_scale = Vector3(300, 300, 300)
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ftw7c"]
albedo_color = Color(0, 0.654902, 0.658824, 1)

[node name="explorer" type="Node3D"]
script = ExtResource("1_5n8xk")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ur1u6")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
mesh = SubResource("PlaneMesh_x854j")
surface_material_override/0 = SubResource("StandardMaterial3D_fstik")

[node name="OriginCube3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.504672, 0)
material = SubResource("StandardMaterial3D_ftw7c")

[node name="Player" parent="." instance=ExtResource("3_8rjl7")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Minimap" parent="UI" instance=ExtResource("4_3k3lb")]
visible = false
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0

[node name="Label_FPS" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -157.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 34.0
grow_horizontal = 0
text = "FPS"
horizontal_alignment = 2

[node name="Label_ParcelPosition" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -157.0
offset_top = 32.0
offset_right = -8.0
offset_bottom = 58.0
grow_horizontal = 0
text = "FPS"
horizontal_alignment = 2

[node name="Panel_BottomLeft" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -144.0
offset_right = 538.0
grow_vertical = 0

[node name="CheckButton_Pause" type="CheckButton" parent="UI/Panel_BottomLeft"]
layout_mode = 1
offset_left = 8.0
offset_top = 72.0
offset_right = 159.0
offset_bottom = 103.0
focus_mode = 0
text = "Pause scenes"
alignment = 2

[node name="OptionButton_Realm" type="OptionButton" parent="UI/Panel_BottomLeft"]
layout_mode = 1
offset_left = 8.0
offset_top = 32.0
offset_right = 526.0
offset_bottom = 63.0
focus_mode = 0
item_count = 4
popup/item_0/text = "mannakia.dcl.eth"
popup/item_0/id = 0
popup/item_1/text = "http://127.0.0.1:8000"
popup/item_1/id = 1
popup/item_2/text = "https://sdk-test-scenes.decentraland.zone"
popup/item_2/id = 2
popup/item_3/text = "https://sdk-team-cdn.decentraland.org/ipfs/goerli-plaza-main"
popup/item_3/id = 3

[node name="Button_Collapse" type="Button" parent="UI/Panel_BottomLeft"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -28.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 18.0
grow_horizontal = 0
focus_mode = 0

[node name="HSlider_SceneRadius" type="HSlider" parent="UI/Panel_BottomLeft"]
layout_mode = 0
offset_left = 128.0
offset_top = 117.0
offset_right = 309.0
offset_bottom = 133.0
focus_mode = 0
min_value = 1.0
max_value = 4.0
value = 1.0
ticks_on_borders = true

[node name="Label_SceneRadius" type="Label" parent="UI/Panel_BottomLeft"]
layout_mode = 0
offset_left = 14.0
offset_top = 112.0
offset_right = 116.0
offset_bottom = 138.0
text = "Scene Radius"

[node name="Label_SceneRadiusValue" type="Label" parent="UI/Panel_BottomLeft"]
layout_mode = 0
offset_left = 318.0
offset_top = 112.0
offset_right = 346.0
offset_bottom = 138.0
text = "1"

[connection signal="gui_input" from="UI" to="." method="_on_ui_gui_input"]
[connection signal="toggled" from="UI/Panel_BottomLeft/CheckButton_Pause" to="." method="_on_check_button_toggled"]
[connection signal="item_selected" from="UI/Panel_BottomLeft/OptionButton_Realm" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="UI/Panel_BottomLeft/Button_Collapse" to="." method="_on_button_collapse_pressed"]
[connection signal="drag_ended" from="UI/Panel_BottomLeft/HSlider_SceneRadius" to="." method="_on_h_slider_scene_radius_drag_ended"]
